Project contributors section to master